First Undo Step missing in Text Editor #61191

Closed
opened 2019-02-05 00:59:38 +01:00 by Leon Eckardt · 5 comments

System Information
Linux Ubuntu 16.04.5 LTS 64Bit, Mesa DRI Intel(R) Sandybridge Mobile

Blender Version
Broken: 2.80.43 38984b10ff,

Short description of error
The First undo step in a newly created text gets missing

Exact steps for others to reproduce the error

  • Create a new text data block or drag a text file into the text editor
  • Do one modification, e.g. type a letter
  • Press Undo
  • -> Text data block vanishes
    Expected: letter disappears, text block still there
**System Information** Linux Ubuntu 16.04.5 LTS 64Bit, Mesa DRI Intel(R) Sandybridge Mobile **Blender Version** Broken: 2.80.43 38984b10ff, **Short description of error** The First undo step in a newly created text gets missing **Exact steps for others to reproduce the error** * Create a new text data block or drag a text file into the text editor * Do one modification, e.g. type a letter * Press Undo * -> Text data block vanishes Expected: letter disappears, text block still there
Author

Added subscriber: @Leon95

Added subscriber: @Leon95
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Campbell Barton was assigned by Philipp Oeser 2019-02-05 11:35:09 +01:00
Member

Can confirm, since this is Undo-related, it is probably best looked by @ideasman42 ?

Can confirm, since this is Undo-related, it is probably best looked by @ideasman42 ?

This issue was referenced by cd2bf1fc91

This issue was referenced by cd2bf1fc91d7d940ebd32be0ef60d04d0f2a8af1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61191
No description provided.