Fix T61191: First undo step missing in text editor